@@ -6,7 +6,7 @@ public class EventParser {
 
     public static String parse(String text) {
 
-        if (text == null || text.trim().isEmpty()) {
+        if (text == null || text.isBlank()) {
             return null;
         }
 
